--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ On the eve of the occupation, Kharkiv's prewar population of 700,000 had been do
 
 By the time of Kharkiv's liberation in August 1943, the surviving population had been reduced to under 200,000. Seventy percent of the city had been destroyed.</span>
 
-        <h4 align="center">I want to share with you a documentary about the great war in Kharkov</h4>
+        <h4 align="center">I want to share with you a documentary about the WW2 in Kharkov</h4>
 
         <p align="center">
 
