aboutme page created

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,9 +2,123 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>AboutMe</title>
 </head>
-<body>
+
+<body bgcolor="#c0c0c0" background="./img/bg.jpg">
+
+<header>
+
+  <nav>
+
+    <a href="../index.html" target="_blank">
+      <img src="https://www.svgrepo.com/show/14443/home.svg" alt="Index" width="30" height="30"></a>
+
+    <a href="contacts.html" target="_blank">
+      <img src="https://www.svgrepo.com/show/46912/txt.svg" alt="Contacts" width="30" height="30">
+    </a>
+
+
+  </nav>
+
+</header>
+
+<main>
+
+  <section align="center">
+
+
+    <h1 align="center">I love to watch films and serials and want to show you my
+      favorites.</h1>
+
+
+    <h3>
+      <mark>Stranger Things</mark>
+    </h3>
+
+
+    <span>When Joyce's 12-year-old son Will goes missing, she launches a terrifying investigation into his disappearance with local authorities. As they search for answers, they unravel a series of extraordinary mysteries involving secret government experiments, unnerving supernatural forces and a very unusual little girl.</span>
+
+
+    <p><a href="https://en.wikipedia.org/wiki/Stranger_Things" target="_blank"><img
+            src="https://images.hdqwalls.com/wallpapers/stranger-things-2020-q9.jpg" alt="Stranger Things"
+            width="750" height="400"></a></p>
+
+    <p>You can find trailer here:</p>
+
+    <p>
+      <iframe width="750" height="400" src="https://www.youtube.com/embed/b9EkMc79ZSU"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+    </p>
+
+
+    <hr>
+    <h3>
+      <mark>The 100</mark>
+    </h3>
+
+    <span>The 100 follows post-apocalyptic survivors from a space habitat, the Ark, who return to Earth nearly a century after a devastating nuclear apocalypse. The first people sent to Earth are a group of juvenile delinquents who encounter descendants of survivors of the nuclear disaster on the ground.</span>
+    <p><a href="https://en.wikipedia.org/wiki/The_100_(TV_series)" target="_blank"><img
+            src="https://images8.alphacoders.com/108/1082036.jpg" alt="The100" width="750" height="400"></a></p>
+
+    <p>You can find trailer here:</p>
+
+    <p>
+      <iframe width="750" height="400" src="https://www.youtube.com/embed/ia1Fbg96vL0"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+    </p>
+
+
+    <hr>
+    <h3>
+      <mark>Under the Dome</mark>
+    </h3>
+
+    <span>Under the Dome tells the story of the residents of the fictional small town of Chester's Mill, when a massive, transparent, indestructible dome suddenly cuts them off from the rest of the world. Military forces, the government, and the media positioned outside the barrier attempt to break it down, while the residents trapped inside must find their own ways to survive with diminishing resources and rising tensions. A small group of people inside the dome must also unravel complicated mysteries to figure out what the dome is, where it came from, and when (and if) it will go away.</span>
+    <p><a href="https://en.wikipedia.org/wiki/Under_the_Dome_(TV_series)" target="_blank"><img
+            src="https://wallpapercave.com/wp/wp5685960.png" alt="Under the Dome" width="750" height="400"></a></p>
+
+    <p>You can find trailer here:</p>
+
+    <iframe width="750" height="400" src="https://www.youtube.com/embed/f_Y5YeYrqUk"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+
+
+  </section>
+  <hr>
+</main>
+
+<footer>
+
+  <aside>
+
+    <nav align="center">
+
+      <a href="mailto:dimaisaenko50@gmail.com" target="_blank"><img
+              src="https://www.svgrepo.com/show/32285/email.svg"
+              alt="MailMe" width="30" height="30"></a>
+      <a href="tel:+380684489878"><img src="https://www.svgrepo.com/show/10276/telephone.svg" alt="CallMe"
+                                       width="30" height="30"></a>
+      <a href="https://www.instagram.com/fd_ps/?next=%2F" target="_blank"><img
+              src="https://www.svgrepo.com/show/4675/instagram.svg" alt="Instagram" width="30" height="30"></a>
+      <a href="https://steamcommunity.com/profiles/76561198094173381/" target="_blank"><img
+              src="https://www.svgrepo.com/show/342255/steam.svg" alt="Steam" width="30" height="30"></a>
+      <a href="https://www.linkedin.com/in/%D0%B4%D0%BC%D0%B8%D1%82%D1%80%D0%B8%D0%B9-%D0%B8%D1%81%D0%B0%D0%B5%D0%BD%D0%BA%D0%BE-011b7a258/"
+         target="_blank"><img
+              src="https://www.svgrepo.com/show/25824/linked-in-logo-of-two-letters.svg" alt="LinkedIn" width="30"
+              height="30"></a>
+    </nav>
+
+  </aside>
+
+</footer>
+
 
 </body>
 </html>
