--- a/index.html
+++ b/index.html
@@ -13,13 +13,25 @@
 
 <header>
 
-    <h1 align="center">Hello, my name is Dmytro</h1>
+    <nav>
+
+        <a href="pages/aboutme.html" target="_blank">
+            <img src="https://www.svgrepo.com/show/16809/man-thinking-about-love.svg" alt="AboutMe" width="30"
+                 height="30"></a>
+
+        <a href="pages/contacts.html" target="_blank">
+            <img src="https://www.svgrepo.com/show/46912/txt.svg" alt="Contacts" width="30" height="30">
+        </a>
+
+
+    </nav>
 
 </header>
 
 <main>
 
     <section>
+        <h1 align="center">Hello, my name is Dmytro</h1>
 
         <h3 align="center">I'm from Kharkiv and I want to show you my city.</h3>
         <span>Kharkiv is located in the north-eastern part of Ukraine in close proximity to the border with Russia (about 35 km), on the border of two landscape zones - forest-steppe and steppe. The climate in the city is temperate continental; winters are cold and snowy, summers are hot. The average temperature in January is minus 4.6 degrees Celsius, in July - plus 21.3 degrees Celsius. The City Day of Kharkiv is celebrated on August 23.
