--- a/aboutme.html
+++ b/aboutme.html
@@ -11,12 +11,10 @@
 
   <nav>
 
-    <a href="../index.html" target="_blank">
+    <a href="index.html" target="_blank">
       <img src="https://www.svgrepo.com/show/14443/home.svg" alt="Index" width="30" height="30"></a>
 
-    <a href="contacts.html" target="_blank">
-      <img src="https://www.svgrepo.com/show/46912/txt.svg" alt="Contacts" width="30" height="30">
-    </a>
+
 
 
   </nav>
