--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
 
     <nav>
 
-        <a href="pages/aboutme.html" target="_blank">
+        <a href="aboutme.html" target="_blank">
             <img src="https://www.svgrepo.com/show/16809/man-thinking-about-love.svg" alt="AboutMe" width="30"
                  height="30"></a>
 
-        <a href="pages/contacts.html" target="_blank">
-            <img src="https://www.svgrepo.com/show/46912/txt.svg" alt="Contacts" width="30" height="30">
-        </a>
+
 
 
     </nav>
