--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 
-<body bgcolor="#c0c0c0" background="pages/img/bg.jpg">
+<body bgcolor="#c0c0c0" background="https://top-fon.com/uploads/posts/2022-09/1663860972_3-top-fon-com-p-serii-fon-html-foto-3.jpg">
 
 <header>
 
